--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -18,23 +18,23 @@ Vagrant.configure(2) do |config|
     end
   end
 
-  config.vm.define "psql-master-centos7" do |centos7|
+  config.vm.define "psql-primary-centos7" do |centos7|
     centos7.vm.box = "samdoran/centos7"
-    centos7.vm.hostname = "psql-master-centos7"
+    centos7.vm.hostname = "psql-primary-centos7"
     centos7.vm.network "private_network", ip: "10.78.1.17"
     config.vm.provider "virtualbox" do |vbox|
-      vbox.name = "psql-master-centos7"
+      vbox.name = "psql-primary-centos7"
       vbox.cpus = 2
       vbox.memory = 1024
     end
   end
 
-  config.vm.define "psql-slave-centos7" do |centos7|
+  config.vm.define "psql-standby-centos7" do |centos7|
     centos7.vm.box = "samdoran/centos7"
-    centos7.vm.hostname = "psql-slave-centos7"
+    centos7.vm.hostname = "psql-standby-centos7"
     centos7.vm.network "private_network", ip: "10.78.1.18"
     config.vm.provider "virtualbox" do |vbox|
-      vbox.name = "psql-slave-centos7"
+      vbox.name = "psql-standby-centos7"
       vbox.cpus = 2
       vbox.memory = 1024
     end
