--- a/tests/ansible-tower/files/psql-replication.yml
+++ b/tests/ansible-tower/files/psql-replication.yml
@@ -1,5 +1,5 @@
 - name: Configure PostgreSQL streaming replication
-  hosts: database_slave
+  hosts: database_standby
 
   pre_tasks:
     - name: Remove recovery.conf
@@ -7,7 +7,7 @@
         path: /var/lib/pgsql/9.4/data/recovery.conf
         state: absent
 
-    - name: Add slave to database group
+    - name: Add standby to database group
       add_host:
         name: "{{ inventory_hostname }}"
         groups: database
@@ -38,22 +38,22 @@
       firewalld_https_port: "{{ nginx_https_port }}"
       when: ansible_os_family == 'RedHat'
 
-- name: Configure master server
+- name: Configure primary server
   hosts: database[0]
 
   vars:
-    postgresrep_master_address: "{{ hostvars[groups[postgresrep_group_name_master][0]].ansible_all_ipv4_addresses[-1] }}"
-    postgresrep_slave_address: "{{ hostvars[groups[postgresrep_group_name][0]].ansible_all_ipv4_addresses[-1] }}"
+    postgresrep_primary_address: "{{ hostvars[groups[postgresrep_group_name_primary][0]].ansible_all_ipv4_addresses[-1] }}"
+    postgresrep_standby_address: "{{ hostvars[groups[postgresrep_group_name][0]].ansible_all_ipv4_addresses[-1] }}"
 
   roles:
     - postgres-replication
 
-- name: Configure slave server
-  hosts: database_slave
+- name: Configure standby server
+  hosts: database_standby
 
   vars:
-    postgresrep_master_address: "{{ hostvars[groups[postgresrep_group_name_master][0]].ansible_all_ipv4_addresses[-1] }}"
-    postgresrep_slave_address: "{{ hostvars[groups[postgresrep_group_name][0]].ansible_all_ipv4_addresses[-1] }}"
+    postgresrep_primary_address: "{{ hostvars[groups[postgresrep_group_name_primary][0]].ansible_all_ipv4_addresses[-1] }}"
+    postgresrep_standby_address: "{{ hostvars[groups[postgresrep_group_name][0]].ansible_all_ipv4_addresses[-1] }}"
 
   roles:
     - postgres-replication
